// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <span
    class="tag tag--critical-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'filled' appearance classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'ghost' appearance classes 1`] = `
<div>
  <span
    class="tag tag--primary-ghost tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'lg' size classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--lg"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'md' size classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'neutral' skin classes 1`] = `
<div>
  <span
    class="tag tag--neutral-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'outline' appearance classes 1`] = `
<div>
  <span
    class="tag tag--primary-outline tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'primary' skin classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'secondary' skin classes 1`] = `
<div>
  <span
    class="tag tag--secondary-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'sm' size classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--sm"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'soft' appearance classes 1`] = `
<div>
  <span
    class="tag tag--primary-soft tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'success' skin classes 1`] = `
<div>
  <span
    class="tag tag--success-filled tag--md"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should apply 'xs' size classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--xs"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should render additional classes 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md other-class"
  >
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should render left slot content 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md"
  >
    <span
      class="tag__left"
    >
      Left slot
    </span>
    Tag
  </span>
</div>
`;

exports[`Tag Snapshots should render right slot content 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md"
  >
    Tag
    <span
      class="tag__right"
    >
      Right slot
    </span>
  </span>
</div>
`;

exports[`Tag Snapshots should renders component as anchor 1`] = `
<DocumentFragment>
  <a
    class="tag tag--primary-filled tag--md"
    href="#"
  >
    Tag
  </a>
</DocumentFragment>
`;

exports[`Tag Snapshots should renders default component 1`] = `
<div>
  <span
    class="tag tag--primary-filled tag--md"
  >
    Tag
  </span>
</div>
`;
